--- a/DOM/test.html
+++ b/DOM/test.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        html {
-            padding: 0px;
-            margin: 0px;
-        }
+      html {
+        padding: 0px;
+        margin: 0px;
+      }
 
-        body {
-            background-color: black;
-            text-align: center;
-        }
-        section {
-            width: 50%;
-            margin: 50px auto;
-            background-color: brown;
-            border-radius: 20px;
-            padding: 20px;
-        }
-        img {
-            z-index: 100;
-            will-change: opacity;
-        }
-        h1,
-        h3,
-        span {
-            color: white;
-        }
+      body {
+        background-color: black;
+        text-align: center;
+      }
+      section {
+        width: 50%;
+        margin: 50px auto;
+        background-color: brown;
+        border-radius: 20px;
+        padding: 20px;
+      }
+      img {
+        z-index: 100;
+        will-change: opacity;
+      }
+      h1,
+      h3,
+      span {
+        color: white;
+      }
     </style>
-</head>
-<body>
-<section>
-    <img src="make-better-xyfinding/img/avatar.png" alt="" />
-    <h1 id="brand">Coding Practice</h1>
-    <h3>Don't forget to code your dream</h3>
-</section>
-<span>Hello World!</span>
-</body>
+    <script src="test.js" defer></script>
+  </head>
+  <body>
+    <section>
+      <img src="make-better-xyfinding/img/avatar.png" alt="" />
+      <h1 id="brand">Coding Practice</h1>
+      <h3>Don't forget to code your dream</h3>
+    </section>
+    <span>Hello World!</span>
+
+    <script>
+      const section = document.querySelector("section");
+      const h2 = document.createElement("h2");
+      h2.setAttribute("class", "title"); // <h2 class ="title></h2>
+      h2.textContent = "This is a title"; // <h2 class ="title>This is a title</h2>
+
+      const h3 = document.querySelector("h3");
+      section.insertBefore(h2, h3);
+    </script>
+  </body>
 </html>
