Update teacher version

--- a/game/teacher_version/index.html
+++ b/game/teacher_version/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Title</title>
-    <script src="main.js" defer></script>
+    <script type="module" src="src/main.js" defer></script>
     <!--폰트어썸 사이트 이용-->
     <script
       src="https://kit.fontawesome.com/b4315a7b89.js"
