--- a/async/test.html
+++ b/async/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Test</title>
-  <script src="promise.js" defer></script>
+  <script src="async.js" defer></script>
 </head>
 <body>
 
